--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -112,7 +112,7 @@
             &-option {
                 position: absolute;
                 top: 41px;
-                z-index: 1000;
+                z-index: $Z_index_avatar_option;
                 padding: 5px 15px;
                 background: #fff;
                 box-shadow: 0px 0px 20px 0px #b2b2b2;
@@ -163,7 +163,7 @@
                     position: absolute;
                     top: 41px;
                     right: -15px;
-                    z-index: 1000;
+                    z-index: $Z_index_avatar_option;
                     padding: 5px 15px;
                     width: 300px;
                     background: #fff;
@@ -227,14 +227,14 @@
                     display: block;
                 }
                 & > .list_choice {
-                    animation: toggle_submenu 0.6s;
+                    animation: toggle_submenu 0.4s;
                     transform-origin: 0% 0%;
                     position: absolute;
-                    z-index: 100;
+                    z-index: $Z_index_menu_multichoic;
                     color: $text_color;
                     padding: 0px 12px;
                     display: none;
-                    box-shadow: 0px 0px 10px 0px #b5b5b5;
+                    box-shadow: 0px 4px 10px 0px #b5b5b5;
                     top: 75px;
                     background: #fff;
                     & > span {
