tạo component con chung

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -5,3 +5,9 @@
 @import "../../components/layout/header/header";
 @import "../../components/layout/footer/footer";
 @import "../../components/layout/sidebar/sidebar";
+
+@import "../../components-share/Card/CardProduct/card_product";
+@import "../../components-share/Card/CardReview/card_review";
+@import "../../components-share/Carousel/carousel_products";
+
+@import "./pages/homepage";
