--- a/src/components/layout/footer/_footer.scss
+++ b/src/components/layout/footer/_footer.scss
@@ -1,3 +1,52 @@
 .footer {
-    color: aqua;
+    &-get_email {
+        h3 {
+            padding: 10px 0px 10px 30px;
+        }
+
+        .input-email {
+            display: flex;
+            align-items: center;
+            height: 100%;
+            & > div:first-child {
+                padding-right: 0px;
+            }
+            & > div:last-child {
+                padding-left: 0px;
+            }
+        }
+
+        input {
+            padding: 10px 10px 10px 20px;
+            width: 100%;
+            height: 100%;
+            color: #333;
+            outline: none;
+        }
+
+        button {
+            outline: none;
+            padding: 10px;
+            width: 100%;
+            height: 100%;
+            background-color: $text_color_hover;
+            color: white;
+            border: 1px solid $text_color_hover;
+            &:hover {
+                background-color: white;
+                color: $text_color_hover;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 768px) {
+    .footer {
+        .input-email > div:first-child {
+            padding-right: 12px;
+        }
+        .input-email > div:last-child {
+            padding-left: 12px;
+            margin-top: 10px;
+        }
+    }
 }
