ui login sign up done

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -13,3 +13,4 @@
 @import "../../components-share/Modal/ModalReviewCart/modal_review_cart";
 
 @import "./pages/homepage";
+@import "./pages/loginpage";
