--- a/src/assets/css/pages/_loginpage.scss
+++ b/src/assets/css/pages/_loginpage.scss
@@ -2,7 +2,7 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 3px 6px 15px 0px rgba($color: #000000, $alpha: 0.25);
-    width: fit-content;
+    width: auto;
     padding: 30px;
     max-width: 500px;
 
@@ -13,6 +13,7 @@
     }
     &-social_login {
         text-align: center;
+        margin: 20px 0px;
         .icon_social {
             display: inline-block;
             padding: 8px 20px;
@@ -52,7 +53,7 @@
     }
     .btn-login {
         width: fit-content;
-        margin: 0 auto;
+        margin: 20px auto;
         padding: 10px 20px;
         border: 1px solid $text_color_hover;
         background-color: $text_color_hover;
