UI responsive cartpage

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -11,6 +11,8 @@
 @import "../../components-share/Carousel/carousel_products";
 @import "../../components-share/Modal/ModalReviewProduct/modal_review_product";
 @import "../../components-share/Modal/ModalReviewCart/modal_review_cart";
+@import "../../components-share/Cart/cart_item/cart_item";
 
 @import "./pages/homepage";
 @import "./pages/loginpage";
+@import "./pages/cartpage";
