add modal layout

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -12,6 +12,7 @@
 @import "../../components-share/Modal/ModalReviewProduct/modal_review_product";
 @import "../../components-share/Modal/ModalReviewCart/modal_review_cart";
 @import "../../components-share/Cart/cart_item/cart_item";
+@import "../../components-share/Modal/modal_layout";
 
 @import "./pages/homepage";
 @import "./pages/loginpage";
