--- a/src/components/layout/footer/_footer.scss
+++ b/src/components/layout/footer/_footer.scss
@@ -76,6 +76,13 @@
 
                 li {
                     padding-bottom: 20px;
+                    span {
+                        color: $text_color;
+                        cursor: pointer;
+                        &:hover {
+                            color: $text_color_hover;
+                        }
+                    }
                 }
             }
 
@@ -87,6 +94,15 @@
 
             input.toggle-footer-menu {
                 display: none;
+            }
+
+            .hotline-item {
+                text-decoration: underline;
+                color: $text_color;
+                cursor: pointer;
+                &:hover {
+                    color: $text_color_hover;
+                }
             }
         }
     }
@@ -106,6 +122,9 @@
         }
 
         &-shop_information {
+            h4 {
+                margin: 0px;
+            }
             & > div:first-child {
                 & > div:nth-child(2) {
                     padding-left: 20px;
@@ -144,6 +163,19 @@
                             font-weight: bold;
                         }
                     }
+
+                    .list-info-ul {
+                        margin-top: 20px;
+                    }
+                }
+
+                .contact {
+                    margin-bottom: 20px;
+                }
+
+                .payment-image {
+                    margin-top: 20px;
+                    margin-bottom: 30px;
                 }
             }
         }
