--- a/src/components-share/Modal/_modal_layout.scss
+++ b/src/components-share/Modal/_modal_layout.scss
@@ -31,7 +31,7 @@
             color: #fff;
         }
         .main_content {
-            padding: 20px;
+            // padding: 20px;
             overflow: auto;
             margin: 0;
             max-height: inherit;
