cart review on header

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -13,6 +13,7 @@
 @import "../../components-share/Modal/ModalReviewCart/modal_review_cart";
 @import "../../components-share/Cart/cart_item/cart_item";
 @import "../../components-share/Modal/modal_layout";
+@import "../../components-share/Cart/cart_item_review/cart_item_review";
 
 @import "./pages/homepage";
 @import "./pages/loginpage";
