--- a/src/assets/css/_base_styles.scss
+++ b/src/assets/css/_base_styles.scss
@@ -64,6 +64,9 @@ p {
         background-color: #cd3808;
     }
 }
+.no_pading_col > div {
+    padding: 0px;
+}
 
 @media (min-width: 1200px) {
     .container {
