--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -166,7 +166,7 @@
                     top: 41px;
                     right: -15px;
                     z-index: $Z_index_avatar_option;
-                    padding: 5px 15px;
+                    padding: 5px;
                     width: 300px;
                     background: #fff;
                     box-shadow: 0px 0px 20px 0px #b2b2b2;
@@ -182,6 +182,25 @@
                         right: 35px;
                         transform: rotate(45deg);
                         background: #ffffff;
+                    }
+                    .product_list {
+                        max-height: 300px;
+                        overflow: auto;
+                    }
+                    .cart_total_price {
+                        text-align: center;
+                        line-height: normal;
+                        font-size: large !important;
+                        color: $text_color_hover;
+                        &::before {
+                            content: "Tổng tiền: ";
+                        }
+                    }
+                    .btn-gray,
+                    .btn-red {
+                        line-height: normal;
+                        width: 90%;
+                        text-align: center;
                     }
                 }
             }
