--- a/src/components-share/Cart/cart_item_review/_cart_item_review.scss
+++ b/src/components-share/Cart/cart_item_review/_cart_item_review.scss
@@ -2,6 +2,7 @@
     padding: 10px 0px;
     border-bottom: 1px solid rgb(209, 206, 206);
     width: 100%;
+    margin: 0px;
     &-remove {
         &:hover {
             color: $text_color_hover;
