sửa logic click modal

--- a/src/assets/css/pages/_sanpham.scss
+++ b/src/assets/css/pages/_sanpham.scss
@@ -24,6 +24,8 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgb(157, 157, 157);
             display: none;
+            transform-origin: top;
+            animation: toggle_submenu 0.3s;
             & > * {
                 padding: 10px 25px 5px 20px;
                 cursor: pointer;
