--- a/src/components-share/Modal/ModalReviewProduct/_modal_review_product.scss
+++ b/src/components-share/Modal/ModalReviewProduct/_modal_review_product.scss
@@ -66,6 +66,7 @@
         background-color: $text_color_hover;
         color: #fff;
         cursor: pointer;
+        border-radius: 5px;
         &:hover {
             color: $text_color_hover;
             background: #fff;
