--- a/src/assets/css/_base_styles.scss
+++ b/src/assets/css/_base_styles.scss
@@ -69,6 +69,10 @@ p {
     padding: 0px;
 }
 
+img {
+    border-radius: 5px;
+}
+
 @media (min-width: 1200px) {
     .container {
         max-width: 1200px;
