--- a/src/components-share/Card/CardProduct/_card_product.scss
+++ b/src/components-share/Card/CardProduct/_card_product.scss
@@ -4,7 +4,11 @@
     box-shadow: 0px 2px 46.41px 4.59px rgb(2 38 113 / 8%);
     cursor: pointer;
     position: relative;
+    border-radius: 5px;
+    overflow: hidden;
     &-img {
+        border-radius: 5px;
+        overflow: hidden;
         position: relative;
         img {
             width: 100%;
@@ -64,6 +68,7 @@
             padding: 2px 12px;
             top: 12px;
             right: 0px;
+            border-radius: 2px;
             transform: rotate(-90deg);
             color: #fff;
         }
