--- a/src/components-share/Card/CardReview/_card_review.scss
+++ b/src/components-share/Card/CardReview/_card_review.scss
@@ -2,6 +2,7 @@
     &-img {
         width: 100%;
         overflow: hidden;
+        border-radius: 5px;
         img {
             transition: 0.3s;
             width: 100%;
