--- a/src/components-share/Modal/_modal_layout.scss
+++ b/src/components-share/Modal/_modal_layout.scss
@@ -23,6 +23,7 @@
         position: relative;
         animation: zoomOut 0.3s;
         padding: 0;
+        border-radius: 5px;
         .modal_custom-close {
             position: absolute;
             right: -15px;
