--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -260,6 +260,7 @@
                     display: none;
                     box-shadow: 0px 4px 10px 0px #b5b5b5;
                     top: 75px;
+                    border-radius: 5px;
                     background: #fff;
                     & > span {
                         padding: 12px 0px;
