--- a/src/assets/css/pages/_sanpham.scss
+++ b/src/assets/css/pages/_sanpham.scss
@@ -23,6 +23,7 @@
         //     }
         // }
         .choice {
+            width: 165px;
             background: #fff;
             color: $text_color;
             z-index: 10000;
