fix footer interface and create some policy page

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -19,3 +19,5 @@
 @import "./pages/loginpage";
 @import "./pages/cartpage";
 @import "./pages/sanpham";
+@import "./pages/chinhsachbaomat";
+@import "./pages/chinhsachvanchuyen";
