--- a/src/components-share/Carousel/_carousel_products.scss
+++ b/src/components-share/Carousel/_carousel_products.scss
@@ -1,2 +1,17 @@
 .carousel_product {
 }
+.custom_carousel {
+    .thumbs-wrapper {
+        margin: 0;
+        button.control-arrow {
+            background: black;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 5px;
+            margin-top: -23px;
+        }
+    }
+}
