--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -22,3 +22,4 @@
 @import "./pages/taikhoan";
 @import "./pages/chinhsachbaomat";
 @import "./pages/chinhsachvanchuyen";
+@import "./pages/lienhepage";
