--- a/src/assets/css/pages/_huongdanmuahang.scss
+++ b/src/assets/css/pages/_huongdanmuahang.scss
@@ -1,4 +1,4 @@
-.chinh_sach_van_chuyen {
+.huong_dan_mua_hang {
     text-align: justify;
     font-size: 15px;
     h1 {
@@ -11,9 +11,5 @@
     }
     p {
         margin-bottom: 15px;
-    }
-    li {
-        margin-top: 10px;
-        margin-bottom: 10px;
     }
 }
