--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -28,4 +28,8 @@
 @import "./pages/taikhoan";
 @import "./pages/chinhsachbaomat";
 @import "./pages/chinhsachvanchuyen";
+@import "./pages/chinhsachdoitra";
+@import "./pages/chinhsachthanhtoan";
+@import "./pages/quydinhsudung";
+@import "./pages/huongdanmuahang";
 @import "./pages/lienhepage";
