--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -25,6 +25,8 @@
 @import "./pages/sanpham";
 @import "../../components/pages/san-pham/chi-tiet-san-pham/product_detail";
 
+@import "./pages/checkout";
+
 @import "./pages/taikhoan";
 @import "./pages/chinhsachbaomat";
 @import "./pages/chinhsachvanchuyen";
