--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -202,8 +202,8 @@
                     .btn-gray,
                     .btn-red {
                         line-height: normal;
-                        width: 90%;
                         text-align: center;
+                        display: block;
                     }
                 }
             }
