--- a/src/components-share/Card/CardProduct/_card_product.scss
+++ b/src/components-share/Card/CardProduct/_card_product.scss
@@ -14,6 +14,7 @@
         img {
             width: 100%;
             aspect-ratio: 1/1;
+            object-fit: cover;
         }
         &-mask {
             position: absolute;
