ghep api home page

--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -7,6 +7,7 @@
 @import "../../components/layout/footer/footer";
 @import "../../components/layout/sidebar/sidebar";
 
+@import "../../components-share/Card/CardNews/card_news";
 @import "../../components-share/Card/CardProduct/card_product";
 @import "../../components-share/Card/CardReview/card_review";
 @import "../../components-share/Carousel/carousel_products";
@@ -36,4 +37,3 @@
 @import "./pages/quydinhsudung";
 @import "./pages/huongdanmuahang";
 @import "./pages/lienhepage";
-
