--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -22,7 +22,7 @@
 @import "./pages/loginpage";
 
 @import "./pages/cartpage";
-
+@import "./pages/tin_tuc";
 @import "./pages/sanpham";
 @import "../../components/pages/san-pham/chi-tiet-san-pham/product_detail";
 
