--- a/src/components-share/Cart/cart_item/_cart_item.scss
+++ b/src/components-share/Cart/cart_item/_cart_item.scss
@@ -13,6 +13,7 @@
         img {
             aspect-ratio: 1/1;
             width: calc(100% + 30px);
+            object-fit: cover;
         }
     }
     &-delete {
