--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -31,7 +31,7 @@
 @import "./pages/taikhoan";
 @import "./pages/chinhsachbaomat";
 @import "./pages/chinhsachvanchuyen";
-
+@import "./pages/chinhsachbaohanh";
 @import "./pages/chinhsachdoitra";
 @import "./pages/chinhsachthanhtoan";
 @import "./pages/quydinhsudung";
