--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -37,3 +37,5 @@
 @import "./pages/quydinhsudung";
 @import "./pages/huongdanmuahang";
 @import "./pages/lienhepage";
+
+@import "../../components/pages/checkout/cart_and_checkout";
