--- a/src/components-share/Cart/cart_item/_cart_item.scss
+++ b/src/components-share/Cart/cart_item/_cart_item.scss
@@ -9,6 +9,12 @@
         justify-content: center;
         align-items: center;
     }
+    &-title {
+        span {
+            cursor: pointer;
+            color: $text_color_hover;
+        }
+    }
     &-img {
         img {
             aspect-ratio: 1/1;
