--- a/src/components-share/Cart/cart_item_review/_cart_item_review.scss
+++ b/src/components-share/Cart/cart_item_review/_cart_item_review.scss
@@ -14,6 +14,14 @@
     &-title {
         line-height: normal;
         font-size: small;
+
+        .overflow_ellipsis {
+            display: block;
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
     &-price {
         line-height: normal;
