fix reponsive screen and add map to lien-he page

--- a/src/assets/css/pages/_lienhepage.scss
+++ b/src/assets/css/pages/_lienhepage.scss
@@ -36,6 +36,10 @@
         ul {
             list-style: none;
         }
+        ol,
+        ul {
+            padding-left: 30px;
+        }
     }
     .get-customer-info {
         margin-left: 30px;
@@ -57,6 +61,31 @@
             background-color: #f6470e;
             color: white;
             border: none;
+        }
+    }
+}
+
+@media only screen and (max-width: 769px) {
+    .lien_he {
+        .contact-info {
+            ul {
+                padding-left: 15px;
+                padding-right: 10px;
+            }
+        }
+        .get-customer-info {
+            .information {
+                padding-left: 0px;
+                padding-right: 25px;
+            }
+        }
+        .map {
+            margin-top: 20px;
+            padding-left: 17px;
+            padding-right: 15px;
+            .gg-map {
+                height: 250px;
+            }
         }
     }
 }
