--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -37,5 +37,6 @@
 @import "./pages/quydinhsudung";
 @import "./pages/huongdanmuahang";
 @import "./pages/lienhepage";
+@import "./pages/gioithieupage";
 
 @import "../../components/pages/checkout/cart_and_checkout";
